--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
       border-radius: 5px;
     }
 
-    .popup {
+    .popup, .popup-message {
       position: fixed;
       top: 0;
       left: 0;
-      background-color: #000000dd;
+      background-color: #000000cc;
       width: 100%;
       height: 100%;
-      z-index: 1000;
-      display: none;
+      z-index: 2000;
+      display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
@@ -152,6 +152,28 @@
       cursor: pointer;
     }
 
+    .message-box {
+      background-color: #145214;
+      color: gold;
+      padding: 20px;
+      border-radius: 15px;
+      font-size: 1.2rem;
+      text-align: center;
+      box-shadow: 0 0 20px green;
+    }
+
+    .ok-btn {
+      margin-top: 15px;
+      padding: 10px 20px;
+      background-color: gold;
+      color: #145214;
+      border: none;
+      font-size: 1rem;
+      font-weight: bold;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
     @media(min-width: 768px) {
       .card {
         width: 14%;
@@ -165,8 +187,17 @@
   </style>
 </head>
 <body>
+  <!-- Persistent Preload Message -->
+  <div class="popup-message" id="popup-message">
+    <div class="message-box">
+      Page may load slowly due to your network strength or server call...
+      <br/>
+      <button class="ok-btn" onclick="document.getElementById('popup-message').style.display='none'">OK</button>
+    </div>
+  </div>
+
   <div class="progress-bar"></div>
-  <h1>Top 100 Cryptocurrencies</h1>
+  <h1>Top Cryptocurrencies Analysis </h1>
   <div class="top-bar">
     <select class="currency-select" id="currency-select">
       <option value="usd">USD - US Dollar</option>
@@ -184,6 +215,7 @@
       <option value="zar">ZAR - South African Rand</option>
     </select>
   </div>
+
   <div class="container" id="crypto-container"></div>
 
   <div class="popup" id="chart-popup">
@@ -200,6 +232,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
+    // Currency selection logic
     const selectedFiat = localStorage.getItem("selectedCurrency") || "usd";
     document.getElementById("currency-select").value = selectedFiat;
 
